--- a/src/app/modules/perfil/perfil.component.html
+++ b/src/app/modules/perfil/perfil.component.html
@@ -2,7 +2,7 @@
     <p-fieldset styleClass="sombra-black">
         <ng-template pTemplate="header">
             <div class="flex align-items-center text-primary fadeinleft animation-duration-400">
-                <h2 class="text-white">perfil <span class="text-sm"> Gestión de perfil</span> </h2>
+                <h2 class="text-white">Perfil <span class="text-sm"> Gestión de perfiles</span> </h2>
             </div>
         </ng-template>
             <div class="grid">
